--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
     "next": "14.2.10",
+    "next-themes": "^0.4.4",
     "prisma": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-number-format": "^5.4.2",
     "server-only": "^0.0.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
